Update Bab II III IV

--- a/Bab II - Studi-Literatur.tex
+++ b/Bab II - Studi-Literatur.tex
@@ -223,11 +223,11 @@ Arsitektur \textit{Enterprise} (AE), Tata Kelola AE, dan \textit{Enterprise Arch
 \end{enumerate}
 
 Dari tiga komponen yang telah dijelaskan sebelumnya, dapat disimpulkan bahwa adanya keterkaitan fungsional yang erat antar komponen tersebut.
-Gambar \ref{gambar:corr} menunjukkan hubungan antara Arsitektur \textit{Enterprise} (AE), Tata Kelola AE, dan \textit{Enterprise Architecture Maturity Model}.
+Gambar \ref{gambar:corr} menunjukkan hubungan konseptual antara Arsitektur \textit{Enterprise} (AE), Tata Kelola AE, dan \textit{Enterprise Architecture Maturity Model}.
 \begin{figure}[h] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
   \centering
   \captionsetup{justification=centering}
-      \includegraphics[width=1\textwidth]{image/correlation.png}
-  \caption{Hubungan Antar Komponen}
+      \includegraphics[width=1\textwidth]{image/konseptualEA.png}
+  \caption{Hubungan Konseptual Antara AE, Tata Kelola, dan EAMM}
   \label{gambar:corr}
 \end{figure}
