--- a/table/tabelGapEA.tex
+++ b/table/tabelGapEA.tex
@@ -38,7 +38,7 @@
 
 \textbf{\textit{Architecture Process}} &
 Proses arsitektur sudah dijelaskan dengan jelas, terdokumentasi, dan disosialisasikan. Selain itu sudah ada \textit{gap analysis} dan rencana migrasi menuju kondisi ideal. &
-Proses sudah disosialisasikan melalui dokumen dan SAP LeanIX. Namun, dalam pelaksanaannya, beberapa tim masih menjalankan proses dengan cara yang berbeda-beda. \textit{Gap analysis} juga sudah didokumentasikan. &
+Proses sudah jelas dan disosialisasikan, namun, beberapa tim masih menjalankan proses dengan cara yang berbeda. Analisis \textit{gap} juga sudah ada, tetapi mekanismenya dan aspeknya masih belum jelas. &
 Penerapan proses belum konsisten di seluruh tim. &
 Perbedaan cara kerja antar tim dan belum ada mekanisme kontrol penerapan proses. \\
 
